# deepmesa-rs

./: .gitignore  Cargo.toml  README.md  bitslice.rs  justfile  release.toml
deepmesa-collections/: Cargo.toml  README.md
deepmesa-collections/src/bitvec/: bitops.rs  bitref.rs  bitslice.rs  bitvec.rs  bytes.rs  iter.rs  macros.rs  mod.rs  traits.rs
deepmesa-encoding/: Cargo.toml
deepmesa-encoding/src/prefix/: decoder.rs  delta.rs  encoder.rs  gamma.rs  golomb.rs  macros.rs  mod.rs  unary.rs  varbyte.rs
deepmesa-lists/: Cargo.toml  README.md
deepmesa-lists/src/linkedlist/: fl.rs  iter.rs  list.rs  mod.rs  node.rs
src/: lib.rs
