[package]
name = "deepmesa"
version = "0.1.0"
authors = ["Rahul Singh <rsingh@arrsingh.com>"]
edition = "2018"
categories = [
	"data-structures",
]

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/deepmesa/deepmesa-rs"

[dependencies]
deepmesa-lists = {path = "./deepmesa-lists", version = "0.1.0"}


[workspace]
members = [
    ".",
    "deepmesa-lists",
]
