[package]
name = "deepmesa-collections"
version = "0.8.1-dev"
authors = ["Rahul Singh <rsingh@arrsingh.com>"]
edition = "2018"
categories = [
	"data-structures",
]
description = "A collection of data structures and algorithms designed for performance"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/deepmesa-collections"
homepage = "https://www.deepmesa.com"
repository = "https://github.com/deepmesa/deepmesa-rs/deepmesa-collections"


[lib]
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.3"
deepmesa = {path = "../"}
