[package]
name = "deepmesa-lists"
version = "0.1.0"
authors = ["Rahul Singh <rsingh@arrsingh.com>"]
edition = "2018"
categories = [
	"data-structures",
]
license = "Apache-2.0"

[lib]
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
deepmesa = {path = "../"}